--- a/vignettes/introduction-to-ggfittext.Rmd
+++ b/vignettes/introduction-to-ggfittext.Rmd
@@ -115,7 +115,7 @@ Alternatively, you can set the width and/or height with the `width` and/or
 `height` arguments, which should be `grid::unit()` objects. The horizontal
 and/or vertical centre of the box will be defined by `x` and/or `y`.
 
-### Rich text
+### Experimental feature: rich text
 
 With the `rich = TRUE` argument, `geom_fit_text()` and `geom_bar_text()` both
 support a limited subset of Markdown and HTML markup for text (rendered with
@@ -127,7 +127,8 @@ ggplot(animals_rich, aes(x = type, y = flies, label = animal)) +
   geom_fit_text(reflow = TRUE, grow = TRUE, rich = TRUE)
 ```
 
-Rich text cannot be drawn in polar coordinates.
+Rich text cannot be drawn in polar coordinates. Please note that this feature
+is liable to change, and is subject to upstream changes to gridtext.
 
 ## Experimental feature: text in polar coordinates
 
