--- a/README.Rmd
+++ b/README.Rmd
@@ -13,14 +13,15 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-"
 )
 ```
-
+<!-- badges: start -->
 [![Travis-CI Build Status](https://travis-ci.org/wilkox/ggfittext.svg?branch=master)](https://travis-ci.org/wilkox/ggfittext)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/ggfittext)](https://cran.r-project.org/package=ggfittext)
-[![lifecycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://lifecycle.r-lib.org/articles/stages.html)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+<!-- badges: end -->
 
 # ggfittext
 
-ggfittext provides some ggplot2 geoms for fitting text into boxes.
+ggfittext is a ggplot2 extension for fitting text into boxes.
 
 ```{r hero, echo = FALSE, message = FALSE, fig.width = 8, fig.height = 4}
 yeats <- data.frame(
@@ -59,7 +60,7 @@ p2 <- ggplot(polar_d, aes(label = word, xmin = xmin, xmax = xmax, ymin =
     padding.x = grid::unit(1, "mm"),
     padding.y = grid::unit(1, "mm"),
     place = "top",
-    min.size = 0, rich = T
+    min.size = 0
   )
 p1 + p2
 ```
